replace div app-container with section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<script type="text/babel" src="app.jsx"></script>
 </head>
 <body>
-	<div id="app-container" class="container"></div>
+	<section id="app-container"></section>
 </body>
 </html>
